--- a/demoProject/pom.xml
+++ b/demoProject/pom.xml
@@ -1,45 +1,179 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
-    <modelVersion>4.0.0</modelVersion>
-    
-    <groupId>SeleniumGit</groupId>
-    <artifactId>SeleniumGit</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    
-    <properties>
-        <java.version>11</java.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>4.19.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.10.1</version>
-        </dependency>
-    </dependencies>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <release>11</release>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+
+  <groupId>Maven</groupId>
+  <artifactId>demoProject</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+
+  <name>demoProject</name>
+  <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>   
+<java.version>11</java.version>
+<maven.compiler.source>11</maven.compiler.source>
+<maven.compiler.target>11</maven.compiler.target>
+
+  </properties>
+
+  <dependencies>
+	  
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.23.1</version>
+	</dependency>
+
+	  <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.23.1</version>
+	</dependency>
+
+	  <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.15.1</version>
+	</dependency>
+
+	  <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.1.1</version>
+	</dependency>
+
+		  <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	<dependency>
+	    <groupId>org.testng</groupId>
+	    <artifactId>testng</artifactId>
+	    <version>7.9.0</version>
+	    <scope>test</scope>
+	</dependency>
+
+	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>4.18.1</version>
+	</dependency>
+
+  </dependencies>
+ 
+<build>
+<plugins>
+
+<!--Provides utility goals to work with dependencies like copying, unpacking, analyzing, resolving and many more.-->
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-dependency-plugin</artifactId>
+<version>2.2</version>
+<executions>
+<execution>
+<id>copy-dependencies</id>
+<phase>prepare-package</phase>
+<goals>
+<goal>copy-dependencies</goal>
+</goals>
+<configuration>
+<outputDirectory>${project.build.directory}/lib</outputDirectory>
+<overWriteReleases>false</overWriteReleases>
+<overWriteSnapshots>false</overWriteSnapshots>
+<overWriteIfNewer>true</overWriteIfNewer>
+</configuration>
+</execution>
+</executions>
+</plugin>
+
+<!--Builds a Java Archive (JAR) file from the compiled project classes and resources.-->
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-jar-plugin</artifactId>
+<version>2.6</version>
+<configuration>
+<archive>
+<manifest>
+<addClasspath>true</addClasspath>
+<classpathPrefix>lib/</classpathPrefix>
+<mainClass>theMainClass</mainClass>
+</manifest>
+</archive>
+</configuration>
+</plugin>
+
+<!--The Compiler Plugin is used to compile the sources of your project.-->
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.2</version>
+<!-- <configuration>-->
+<!-- <source>1.8</source>-->
+<!-- <target>1.8</target>-->
+<!-- </configuration>-->
+</plugin>
+</plugins>
+<pluginManagement>
+<plugins>
+<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+<plugin>
+<groupId>org.eclipse.m2e</groupId>
+<artifactId>lifecycle-mapping</artifactId>
+<version>1.0.0</version>
+<configuration>
+<lifecycleMappingMetadata>
+<pluginExecutions>
+<pluginExecution>
+<pluginExecutionFilter>
+<groupId>
+org.apache.maven.plugins
+</groupId>
+<artifactId>
+maven-plugin-plugin
+</artifactId>
+<versionRange>
+[3.2,)
+</versionRange>
+<goals>
+<goal>descriptor</goal>
+</goals>
+</pluginExecutionFilter>
+<action>
+<ignore></ignore>
+</action>
+</pluginExecution>
+</pluginExecutions>
+</lifecycleMappingMetadata>
+</configuration>
+</plugin>
+
+<!--Maven Surefire MOJO in maven-surefire-plugin.-->
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.22.2</version>
+<configuration>
+<suiteXmlFiles>
+<suiteXmlFile>./testng.xml</suiteXmlFile>
+</suiteXmlFiles>
+<systemPropertyVariables>
+<gridUrl>Grid url value not provided</gridUrl>
+<browserName>chrome</browserName>>
+</systemPropertyVariables>
+</configuration>
+</plugin>
+
+</plugins>
+</pluginManagement>
+</build>
+  
 </project>
